--- a/public/assets/frontend/style.css
+++ b/public/assets/frontend/style.css
@@ -3,8 +3,17 @@
     margin-right: 0;
 }
 
+
 .free{
     margin-right: 380px;
+}
+.bi11{
+    font-size: 27px;
+    font-weight: bold;
+    margin-right: 17px;
+}
+.bi12{
+    margin-right: -54px;
 }
 
 .icon{
